tests/compile_fail/state_machine/no_top_state.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module]
    mod state_machine {}
}

fn main() {}
